<resources>
    <!--Tela de Login-->
    <string name="app_name">Cerviewja</string>
    <string name="email">Endereço de e-mail</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="label_create_account">Novo por aqui? Cadastre-se</string>
    <string name="label_reset_password">Esqueceu a senha?</string>
    <string name="insert_email">Insira um email válido</string>
    <string name="insert_pass">Insira sua senha</string>
    <string name="stay_connect">Manter conectado</string>

    <!--Tela de cadastro-->
    <string name="hello">Olá!</string>
    <string name="about_you">Conte-nos um pouco sobre você.</string>
    <string name="full_name">Nome completo</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="sign_up">Cadastrar</string>
    <string name="name_error">Insira um nome</string>
    <string name="email_error">Insira um email válido</string>
    <string name="password_error">Insira uma senha</string>
    <string name="confirm_password_error">Suas senhas devem ser iguais</string>

    <!--Dialog-->
    <string name="ops">Ops…</string>
    <string name="iupi">Oba!!</string>
    <string name="recovery_email_text">Verifique seu email. Foi enviado o procedimento para
        efetuar a redefinição da sua senha</string>
    <string name="recovery_email_text_error">Erro ao enviar o email de recuperação, tente novamente
    mais tarde</string>
    <string name="loading_text">Carregando, aguarde…</string>
    <string name="got_it_error">Entendi</string>
    <string name="got_it_happy">Tá bom!</string>

    <!--Perfil-->
    <string name="profile">Perfil</string>
    <string name="edit_photo">Editar foto</string>
    <string name="logoff">Desconectar</string>

    <!--Cervejas-->
    <string name="beers">Cervejas</string>
    <string name="new_beer">Nova cerveja</string>
    <string name="empty_list">Sem itens para exibir no momento</string>
    <string name="delete_message">Excluir o item %1$s?</string>
    <string name="delete_message_success">Excluido com sucesso</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="sharing_text">Veja a \"%1$s\", uma das minhas cervejas do app Cerview!! \n\nConfira: %2$s</string>
    <string name="call_atention">Ligar para nosso parceiro para encontrar sua bebida favorita?</string>

    <!--Adicionar cerveja-->
    <string name="the_beer">A Cerveja</string>
    <string name="name">Nome</string>
    <string name="brewery">Cervejaria</string>
    <string name="style">Estilo</string>
    <string name="source">Origem</string>
    <string name="price">Preço</string>
    <string name="alcohol_content">Teor alcoólico</string>
    <string name="save">Salvar</string>
    <string name="edit">Editar</string>
    <string name="empty_error">Insira um valor</string>
    <string name="save_success">Salvo com sucesso</string>
    <string name="current_currency">R$ %1$s</string>
    <string name="cancel">cancelar</string>

    <!--Sobre-->
    <string name="about">Sobre</string>
    <string name="developers">Desenvolvedores</string>

    <string name="process_request">Processando a requisição</string>

    <!--Erros requisição-->
    <string name="user_login_error">Usuário não logado</string>
    <string name="user_not_found">Usuário não encontrado</string>
    <string name="user_email_invalid">Usuário ou senha inválido</string>
    <string name="impossible_account_create">Não foi possível criar a conta</string>
    <string name="stranger_error">Erro desconhecido, informe ao desenvolvedor</string>

    <!--Atualizaçao App-->
    <string name="update_app_text">Você está utilizando uma versão antiga do nosso aplicativo.
       Atualize para continuar avaliando suas cervejas favoritas!</string>
    <string name="update_now">Atualizar aplicativo</string>
    <string name="update_later">Atualizar depois</string>
    <string name="version">Versão %1$s</string>

    <!--Notificações-->
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">Canal de Avisos</string>
    <string name="default_notification_channel_description">Canal de avisos do aplicativo Cerviewja</string>
    <string name="notif_title">Creviewja</string>
    <string name="notif_text">Exemplo de Notificação</string>
    <string name="notif_channel_name">Padrão</string>
    <string name="notif_channel_description">Canal padrão de notificações</string>

    <!--Pelo mundo-->
    <string name="around_world">Pelo mundo</string>
    <string name="title_activity_maps">Map</string>
    <string name="around_world_text">Veja suas cervejas pelo mundo!</string>
</resources>