<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment"
    android:background="@drawable/background_beer">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="64dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email_login"
        style="@style/edittext_white"
        android:layout_marginStart="@dimen/margin_sides_default"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/margin_sides_default"
        android:drawableStart="@drawable/ic_alternate_email_white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edt_password_login"
        style="@style/edittext_white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock_white"
        android:imeOptions="actionSend"
        app:layout_constraintEnd_toEndOf="@+id/edt_email_login"
        app:layout_constraintStart_toStartOf="@+id/edt_email_login"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_login" />

    <TextView
        android:id="@+id/tv_reset_password_login"
        style="@style/link"
        android:layout_width="0dp"
        android:text="@string/label_reset_password"
        app:layout_constraintStart_toStartOf="@+id/edt_password_login"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_login" />

    <Button
        android:id="@+id/btn_sign_in_login"
        style="@style/button_primary"
        android:layout_marginTop="32dp"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_password_login" />

    <CheckBox
        android:id="@+id/cb_stay_connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:text="@string/stay_connect"
        android:fontFamily="@font/archivo_narrow"
        android:textColor="@color/background"
        android:layout_marginTop="@dimen/margin_top_default"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in_login"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_login" />

    <TextView
        android:id="@+id/tv_new_account_login"
        style="@style/link"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_create_account"
        android:gravity="bottom|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cb_stay_connect"
        app:layout_constraintStart_toStartOf="@+id/cb_stay_connect"
        app:layout_constraintTop_toBottomOf="@+id/cb_stay_connect" />
</androidx.constraintlayout.widget.ConstraintLayout>